# foxy-raylib-sandbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
shaders/: fall.fs  grayscale.fs
src/: entity.cpp  entity.h  main.cpp
